# fmrs

./: .dockerignore  .gcloudignore  .gitignore  .gitmodules  .prettierignore  131.main.js  364.main.js  404.html  40piece_beautiful_final.txt  40piece_solutions.txt  AGENTS.md  CLAUDE.md  CLOUD_RUN.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  bishop_magic.yaml  index.html  main.js  package-lock.json  package.json  webpack.config.js  zenkoma_smoke_journey.md
rust/: .gitignore  Cargo.toml
rust/analysis/smoke_cone/: REPORT.md  ab_test.sh  edge_value_dp.py  eval_v2.py  export_gbdt.py  gen_data_v2.sh  process_data_v2.sh  run.sh  train_cone_model.py  train_cone_rank.py
rust/analysis/smoke_cone/data/: .gitignore  best_step_1.txt  best_step_11.txt  best_step_13.txt  best_step_15.txt  best_step_17.txt  best_step_19.txt  best_step_21.txt  best_step_23.txt  best_step_25.txt  best_step_27.txt  best_step_29.txt  best_step_3.txt  best_step_31.txt  best_step_33.txt  best_step_35.txt  best_step_37.txt  best_step_39.txt  best_step_41.txt  best_step_43.txt  best_step_45.txt  best_step_47.txt  best_step_49.txt  best_step_5.txt  best_step_7.txt  best_step_9.txt  frontier.txt
rust/analysis/smoke_cone/data_v2/: best_step_101.txt  best_step_103.txt  best_step_105.txt  best_step_107.txt  best_step_109.txt  best_step_111.txt  best_step_113.txt  best_step_35.txt  best_step_37.txt  best_step_39.txt  best_step_41.txt  best_step_43.txt  best_step_45.txt  best_step_47.txt  best_step_49.txt  best_step_51.txt  best_step_53.txt  best_step_55.txt  best_step_57.txt  best_step_59.txt  best_step_61.txt  best_step_63.txt  best_step_65.txt  best_step_67.txt  best_step_69.txt  best_step_71.txt  best_step_73.txt  best_step_75.txt  best_step_77.txt  best_step_79.txt  best_step_81.txt  best_step_83.txt  best_step_85.txt  best_step_87.txt  best_step_89.txt  best_step_93.txt  best_step_95.txt  best_step_97.txt  best_step_99.txt  frontier.txt  (+41 more)
rust/analysis/smoke_cone/results/: top_positions.txt
rust/benches/: bench.rs  iai_bench.rs
rust/fmrs_core/: Cargo.toml  build.rs
rust/fmrs_core/examples/: backward_extend.rs
rust/fmrs_core/src/: bits.rs  codegen.rs  config.rs  converter.rs  direction.rs  lib.rs  magic.rs  memo.rs  nohash.rs  piece.rs  sfen.rs
rust/fmrs_core/src/jkf/: types.rs
rust/fmrs_core/src/position/: controller.rs  hands.rs  mod.rs  movement.rs  pieces.rs  position.rs  position_ext.rs  previous.rs  rule.rs  zobrist.rs  zobrist_data.rs
rust/fmrs_core/src/position/advance/: advance.rs  attack_prevent.rs  attacker.rs  black.rs  common.rs  mod.rs  options.rs  pinned.rs  state_info.rs  white.rs
rust/fmrs_core/src/position/bitboard/: bitboard.rs  bitboard_pair.rs  color_bitboard.rs  kind_bitboard.rs  mod.rs  square.rs  testing.rs
rust/fmrs_core/src/search/: backward.rs  canonicalize.rs  mod.rs
rust/fmrs_core/src/solve/: low_mem_standard.rs  mate_within.rs  mod.rs  one_way.rs  parallel_solve.rs  reconstruct.rs  standard_solve.rs
rust/fmrs_core/tests/: smoke_cone_analysis.rs
rust/models/: beam_model.json  beam_sota.json  cone_44_gbdt.json  cone_44_model.json  cone_balanced_model.json  cone_beam_model.json  cone_dp_gbdt_reg.json  cone_full_gain_model.json  cone_full_model.json  cone_gain_model.json  cone_pct32_gbdt.json  piececount_model.json
rust/problems/: FAST_PROBLEMS.md  bataco_4247.sfen  chain_207.sfen  diamond.sfen  forest-05-13_57.sfen  jugemu_19447.sfen  jugemu_gentei_32189.sfen  jugemu_gentei_36511.sfen  jugemu_gentei_kai_36603.sfen  jugemu_gentei_kai_36607.sfen  kato-107a_9029.sfen  kato-107b_4197.sfen  kato-162a_6935.ans.sfen  ofm-139_5.sfen  ogiekako-no-pawn-smoke-43.sfen  ryu_no_agito_12555.sfen  wfp-56-12_2571.sfen  wfp-56-12a_2683.sfen
rust/problems/direct/: lances_11.sfen  microcosmos_1525.sfen
rust/scripts/: batch-job.sh  benchmark_beam_variants.sh  deploy-cloud-run.sh  dev-server.js  gcp-spot.sh  oracle_baseline.py  train_beam_model.py
rust/shtsume_rs/: Cargo.toml  build.rs
rust/shtsume_rs/src/: ffi.rs  lib.rs  main.rs
rust/shtsume_rs/src/ffi/: komainf.rs  mkey.rs  mlist.rs  mod.rs  move_.rs  mtt.rs  mvlist.rs  sdata.rs  search.rs  ssdata.rs  tbase.rs  tdata.rs
rust/src/: bit.rs  converter.rs  lib.rs  main.rs  opt.rs  sfen.rs
rust/src/command/: backward.rs  batch.rs  batch_square.rs  bench.rs  magic.rs  mod.rs  single_king_smoke.rs  smoke_constraints.rs  smoke_features.rs  smoke_persistence.rs  solve.rs  solve_bench.rs
rust/src/command/batch_square/: csp.rs  frame.rs  mate.rs  mate_formation.rs  mod.rs  room.rs
rust/src/command/batch_square/logs/: bishop-bishop_087_1736163667.json  bishop-bishop_105_1736162254.json  bishop-bishop_105_1736162512.json  bishop-bishop_119_1736161867.json  bishop-bishop_119_1736165737.json  bishop-bishop_127_1736326725.json  bishop-knight-knight_111_1736728942.json  bishop-knight_195_1736520508.json  bishop-knight_195_1736589196.json  bishop-knight_195_1736720281.json  bishop-rook_053_1736686055.json  knight-bishop_035_1736733733.json  knight-bishop_111_1736212447.json  knight-bishop_115_1736767103.json  knight-bishop_115_1736950574.json  knight-bishop_157_1736762689.json  knight-bishop_157_1737022509.json  knight-bishop_157_1737024591.json  knight-bishop_157_1737073312.json  knight-bishop_157_1737074723.json  (+20 more)
rust/src/command/direct_mate/: mod.rs
rust/src/command/one_way_mate/: action.rs  beam.rs  mod.rs  sa.rs  solve.rs
rust/src/command/server/: index.rs
rust/src/command/single_king_smoke/: beam.rs  enumerate.rs  ideal_backward.rs  mod.rs  oracle.rs  scheduler.rs  search.rs  system.rs  train.rs
rust/src/position/: position.rs  position_ext.rs
rust/src/position/advance/: advance.rs  mod.rs
rust/src/position/bitboard/: bitboard.rs  color_bitboard.rs  mod.rs
rust/src/solver/: memory_save_solve.rs  mod.rs  parallel_solve.rs  reconstruct.rs  shtsume_solve.rs  solve.rs  standard_solve.rs
rust/src/solver/db_parallel_solve/: db.rs  mod.rs  reconstruct.rs  solve.rs
rust/tests/: backward_search_integration.rs
rust/wasm/: Cargo.toml
rust/wasm/src/: backward_search.rs  lib.rs  response.rs  solver.rs
(+225 files in other folders)
