[package]
name = "fmrs"
version = "0.1.0"
authors = ["Keigo Oka <ogiekako@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
bincode = "1.2.0"

arr_macro = "0.1.2"
rand = "0.8.5"

url = "2.1.0"
percent-encoding = "2.1.0"
anyhow = "1.0.58"
twox-hash = "1.6.3"

[dev-dependencies]
pretty_assertions = "0.6.1"
