[package]
name = "fmrs"
version = "0.1.0"
authors = ["Keigo Oka <ogiekako@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[[bin]]
name = "fmrs"

[dependencies]
lazy_static = "1.4.0"

serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8"
bincode = "1.2.0"

arr_macro = "0.1.2"
rand = "0.8.5"

url = "2.1.0"
percent-encoding = "2.1.0"
anyhow = "1.0.58"
twox-hash = "1.6.3"
clap = { version = "3.2.6", features = ["derive"] }
actix-web = "4.1.0"
serde_json = "1.0.81"
serde_repr = "0.1.8"
futures = "0.3.21"
actix-files = "0.6.1"
pprof = { version = "0.10.0", features = ["flamegraph", "protobuf-codec"] }
sysinfo = "0.24.6"

[dev-dependencies]
pretty_assertions = "0.6.1"
criterion = "0.3.6"

[profile.dev]
opt-level = 1

[[bench]]
name = "bench"
harness = false
