[package]
name = "fmrs"
version = "0.1.0"
authors = ["Keigo Oka <ogiekako@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bin]]
name = "fmrs"
bench = false

[workspace]
members = ["wasm", "fmrs_core", "shtsume_rs"]

[dependencies]
fmrs_core = { path = "./fmrs_core" }
shtsume_rs = { path = "./shtsume_rs" }
lazy_static = "*"

serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
bincode = "*"

rand = { version = "*", features = ["small_rng"] }
sled = { version = "*" } # default-features = false
percent-encoding = "*"
anyhow = "*"
clap = { version = "*", features = ["derive"] }
actix-web = "*"
serde_json = "*"
serde_repr = "*"
futures = "*"
actix-files = "*"
pprof = { version = "*", features = [
    "criterion",
    "flamegraph",
    "_protobuf",
    "protobuf-codec",
] }
sysinfo = "*"
tempfile = "*"
log = "*"
env_logger = "*"
rayon = "*"
rustc-hash = "*"
url = "2"
regex = "1.11.1"

[dev-dependencies]
pretty_assertions = "*"
criterion = { version = "*", features = ["html_reports"] }

[profile.dev]
opt-level = 2

[[bench]]
name = "bench"
harness = false
