[package]
name = "fmrs"
version = "0.1.0"
authors = ["Keigo Oka <ogiekako@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gen-magic = ["fmrs_core/gen-magic"]

[lib]
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bin]]
name = "fmrs"
bench = false

[workspace]
members = ["wasm", "fmrs_core"]

[dependencies]
fmrs_core = { path = "./fmrs_core" }

serde = { version = "*", features = ["derive"] }

rand = { version = "*", features = ["small_rng"] }
anyhow = "*"
clap = { version = "*", features = ["derive"] }
actix-web = "*"
serde_json = "*"
futures = "*"
actix-files = "*"
pprof = { version = "*", features = [
    "criterion",
    "flamegraph",
    "_protobuf",
    "protobuf-codec",
] }
log = "*"
env_logger = "*"
rayon = "*"
rustc-hash = "*"
url = "*"
regex = "*"

[dev-dependencies]
pretty_assertions = "*"
criterion = { version = "*", features = ["html_reports"] }

[profile.dev]
opt-level = 2

[[bench]]
name = "bench"
harness = false
