[package]
name = "fmrs"
version = "0.1.0"
authors = ["Keigo Oka <ogiekako@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gen-magic = ["fmrs_core/gen-magic"]

[lib]
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bin]]
name = "fmrs"
bench = false

[workspace]
members = ["wasm", "fmrs_core"]

[dependencies]
fmrs_core = { path = "./fmrs_core" }

# glibc malloc は 128 スレッドの clone()/Vec churn でアリーナ競合＋
# trim 由来の clear_page_erms 嵐になり smoke の巨大 step を律速する。
# mimalloc は多スレッド churn に強く、圧力時はページを OS へ返す
# (decay) ため OOM 安全制約も満たす。
mimalloc = "0.1"

serde = { version = "*", features = ["derive"] }

rand = { version = "0.8.5", features = ["small_rng"] }
anyhow = "*"
clap = { version = "*", features = ["derive"] }
actix-web = "*"
actix-cors = "*"
serde_json = "*"
futures = "*"
actix-files = "*"
pprof = { version = "*", features = [
    "criterion",
    "flamegraph",
    "_protobuf",
    "protobuf-codec",
] }
log = "*"
env_logger = "*"
rayon = "*"
rustc-hash = "*"
url = "*"
regex = "*"

[dev-dependencies]
pretty_assertions = "*"
criterion = { version = "0.5.1", features = ["html_reports"] }
iai-callgrind = "0.16"

[profile.dev]
opt-level = 2

[profile.release.package.wasm]
# Keep the wasm artifact small without applying the same setting to the CLI.
opt-level = "s"
strip = true

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "iai_bench"
harness = false
