[package]
name = "fmrs_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
getrandom = { version = "*", features = ["js"] }
lazy_static = "*"
percent-encoding = "*"
rand = { version = "*" }
serde = { version = "*", features = ["derive"] }
serde_repr = "*"
url = "*"
log = "*"
env_logger = "*"
pretty_assertions = "*"
xxhash-rust = { version = "*", features = ["xxh3"] }
dashmap = "*"
shogi-kifu-converter = "0.2.2"
rayon = "1.10.0"

[dev-dependencies]
pretty_assertions = "*"
serde_json = "*"
