[package]
name = "fmrs_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gen-magic = []

[dependencies]
anyhow = "*"
dashmap = "*"
lazy_static = "*"
log = "*"
percent-encoding = "*"
pretty_assertions = "*"
proc-macro2 = "*"
quote = "*"
rand = { version = "*" }
rayon = "*"
serde = { version = "*", features = ["derive"] }
shogi-kifu-converter = "0.2"
url = "*"

[dev-dependencies]
pretty_assertions = "*"
serde_json = "*"
