[package]
name = "wasm"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
fmrs_core = { path = "../fmrs_core" }
wasm-bindgen = "*"
getrandom = { version = "*", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "*", optional = true }

anyhow = "*"

[dev-dependencies]
wasm-bindgen-test = "*"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# https://github.com/bevyengine/bevy/issues/16030
strip = true
